--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
-    <title>Stake TEA</title>
+    <title>STAKE</title>
     <style>
         @keyframes marquee {
             0% {
@@ -74,7 +74,7 @@
                             aria-current="page">Stake</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="/feature/farm/farm.html"
                             class="block py-2 px-3 rounded-sm bg-transparent text-slate-300 hover:bg-gray-700/80 md:py-1.5 md:px-4">Farm</a>
                     </li>
                     <li>
