--- a/index.html
+++ b/index.html
@@ -97,10 +97,15 @@
         </div>
     </div>
 
+    <div class="text-slate-300 ml-4 mt-10 mb-4 flex-row justify-center items-center">
+        <h3 class="font-extrabold text-[20px] tracking-[1px]">TEA Staking</h3>
+        <h3 class="text-[14px]">Enjoy the rewards of staking with high APY</h3>
+    </div>
+
     <div class="md:flex md:w-1/2 md:mx-auto">
         <div class="container w-full h-full flex justify-center items-center">
             <div
-                class="mt-20 mx-2 px-4 pt-1 pb-4 w-full flex-row justify-center items-center backdrop-blur-lg bg-white/5 rounded-lg shadow-md">
+                class="mt-4 mx-2 px-4 pt-1 pb-4 w-full flex-row justify-center items-center backdrop-blur-lg bg-white/5 rounded-lg shadow-md">
                 <h3 class="text-[#DDDDDD] text-[20px] mb-2 pl-1 font-Nunito">Native Staking</h3>
                 <div class="border-l-3 border-green-400 px-3 py-1 mb-3 backdrop-blur-lg bg-white/5 shadow-lg rounded-lg">
                     <div class="text-[#DDDDDD]">Balance <i class="fa-solid fa-wallet text-[12px] text-green-400"></i></div>
