--- a/index.html
+++ b/index.html
@@ -97,15 +97,17 @@
         </div>
     </div>
 
-    <div class="text-slate-300 ml-4 mt-10 mb-4 flex-row justify-center items-center">
-        <h3 class="font-extrabold text-[20px] tracking-[1px]">TEA Staking</h3>
-        <h3 class="text-[14px]">Enjoy the rewards of staking with high APY</h3>
+    <div class="md:flex md:w-1/2 md:mx-auto">
+        <div class="text-slate-300 ml-4 mt-10 md:mt-20 mb-4 md:mb-0 flex-row justify-center items-center">
+            <h3 class="font-extrabold text-[20px] tracking-[1px]">TEA Staking</h3>
+            <h3 class="text-[14px]">Enjoy the rewards of staking with high APY</h3>
+        </div>
     </div>
 
-    <div class="md:flex md:w-1/2 md:mx-auto">
+    <div class="md:flex md:w-1/2 md:mx-auto md:mt-6">
         <div class="container w-full h-full flex justify-center items-center">
             <div
-                class="mt-4 mx-2 px-4 pt-1 pb-4 w-full flex-row justify-center items-center backdrop-blur-lg bg-white/5 rounded-lg shadow-md">
+                class="mt-4 md:mt-0 mx-2 px-4 pt-1 pb-4 w-full flex-row justify-center items-center backdrop-blur-lg bg-white/5 rounded-lg shadow-md">
                 <h3 class="text-[#DDDDDD] text-[20px] mb-2 pl-1 font-Nunito">Native Staking</h3>
                 <div class="border-l-3 border-green-400 px-3 py-1 mb-3 backdrop-blur-lg bg-white/5 shadow-lg rounded-lg">
                     <div class="text-[#DDDDDD]">Balance <i class="fa-solid fa-wallet text-[12px] text-green-400"></i></div>
@@ -185,7 +187,7 @@
     
         <div class="container w-full h-full flex justify-center items-center">
             <div
-                class="mt-10 md:mt-20 mx-2 px-4 pt-1 pb-4 w-full flex-row justify-center items-center backdrop-blur-lg bg-white/5 rounded-lg shadow-md">
+                class="mt-10 md:mt-0 mx-2 px-4 pt-1 pb-4 w-full flex-row justify-center items-center backdrop-blur-lg bg-white/5 rounded-lg shadow-md">
                 <h3 class="text-[#DDDDDD] text-[20px] mb-2 pl-1 font-Nunito">AIT Staking</h3>
                 <div class="border-l-3 border-green-400 px-3 py-1 mb-3 backdrop-blur-lg bg-white/5 shadow-lg rounded-lg">
                     <div class="text-[#DDDDDD]">Balance <i class="fa-solid fa-wallet text-[12px] text-green-400"></i></div>
@@ -263,7 +265,7 @@
         </div>
     </div>
 
-    <div class="flex justify-center items-center mt-16 mb-6 gap-2 text-[18px] text-slate-300 md:absolute md:bottom-60 md:left-1/2 md:transform md:-translate-x-1/2">
+    <div class="flex justify-center items-center mt-16 mb-6 gap-2 text-[18px] text-slate-300 md:absolute md:bottom-30 md:left-1/2 md:transform md:-translate-x-1/2">
         <a href="https://x.com/m_amarudinn2">
             <div class="bg-white/5 shadow-lg w-8 h-8 flex justify-center items-center rounded-full"><i
                     class="fa-brands fa-x-twitter"></i></div>
@@ -277,7 +279,7 @@
                     class="fa-brands fa-github"></i></div>
         </a>
     </div>
-    <div class="relative mt-3 py-2 backdrop-blur-lg bg-white/5 shadow-lg md:w-1/2 md:absolute md:bottom-30 md:left-1/2 md:transform md:-translate-x-1/2">
+    <div class="relative mt-3 py-2 backdrop-blur-lg bg-white/5 shadow-lg md:w-1/2 md:absolute md:bottom-0 md:left-1/2 md:transform md:-translate-x-1/2">
         <div class="absolute top-0 left-1/2 transform -translate-x-1/2 border-t-2 border-green-400 w-1/4 rounded-lg">
         </div>
         <h3 class="text-slate-300 text-2xl mb-3 flex justify-center items-center">Tea Assam</h3>
