--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav class="backdrop-blur-lg bg-white/5 border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <span class="self-center text-[16px] whitespace-nowrap dark:text-white">AIRDROP INTELLIGENT</span>
+                <span class="self-center text-[16px] whitespace-nowrap text-slate-300 font-bold">AIRDROP INTELLIGENT</span>
             </a>
             <div class="flex justify-between items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 <div
@@ -198,7 +198,7 @@
                 <div class="border-l-3 border-green-400 px-3 py-1 mb-3 backdrop-blur-lg bg-white/5 shadow-lg rounded-lg">
                     <div class="text-[#DDDDDD]">APY <i class="fa-solid fa-seedling text-[12px] text-green-400"></i></div>
                     <div class="text-[#DDDDDD]">
-                        <span>500%</span>
+                        <span>77%</span>
                     </div>
                 </div>
                 <div class="border-l-3 border-green-400 px-3 py-1 mb-3 backdrop-blur-lg bg-white/5 shadow-lg rounded-lg">
